[project]
name = "mblib"
version = "0.1"
description = "MaaS Blender Common Library"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "TOYOTA MOTOR CORPORATION"}]

dependencies = [
    "aiohttp~=3.8.5",
    "fastapi~=0.103.2",
    "pydantic~=2.4.2",
    "pydantic_settings~=2.0.3",
]
